--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/desktop/section5.css">
     <link rel="stylesheet" type="text/css" href="css/desktop/section6.css">
     <link rel="stylesheet" type="text/css" href="css/desktop/footer.css">
+    <link rel="stylesheet" type="text/css" href="css/desktop/alert.css">
 
     <link rel="stylesheet" type="text/css" href="css/response/r_style.css">
     <link rel="stylesheet" type="text/css" href="css/response/r_section1.css">
@@ -80,15 +81,15 @@
 
             <div class="section3_flex"> 
                <div class="section3_box1 section3_box">
-                  <img src="Landing-assets/D_Screen_3_img1.png" class="section3_img1">
+                  <img src="Landing-assets/D_Screen_3_Img1.png" class="section3_img1">
                   <div class="section3_p section3_box1_p">Получать лучшие рецепты по разным категориям</div>
                </div>
                <div class="section3_box2 section3_box">
-                  <img src="Landing-assets/D_Screen_3_img2.png" class="section3_img2">
+                  <img src="Landing-assets/D_Screen_3_Img2.png" class="section3_img2">
                   <p class="section3_p">Готовить без лишних усилий<br>и делать из каждого дня<br>не рутинный</p>
                </div>
                <div class="section3_box3 section3_box">
-                  <img src="Landing-assets/D_Screen_3_img3.png" class="section3_img3">
+                  <img src="Landing-assets/D_Screen_3_Img3.png" class="section3_img3">
                   <p class="section3_p ">Довольные<br>члены семьи</p>
                </div>
                <div class="section3_ellipse">
@@ -117,7 +118,7 @@
                         </p>
                   </div>
                   <div class="section5_box1_img section5_box_img">
-                     <img src="Landing-assets/D_Screen_5_img1.png">
+                     <img src="Landing-assets/D_Screen_5_Img1.png">
                      <p>Дейнерис</p>
                      <p class="p1">56 лет</p>
                   </div>
@@ -130,7 +131,7 @@
                         </p>
                   </div>
                   <div class="section5_box2_img section5_box_img">
-                     <img src="Landing-assets/D_Screen_5_img2.png">
+                     <img src="Landing-assets/D_Screen_5_Img2.png">
                      <p>Тайвин</p>
                      <p class="p1">43 лет</p>
                   </div>
@@ -143,7 +144,7 @@
                         </p>
                   </div>
                   <div class="section5_box3_img section5_box_img">
-                     <img src="Landing-assets/D_Screen_5_img3.png">
+                     <img src="Landing-assets/D_Screen_5_Img3.png">
                      <p>Серсея</p>
                      <p class="p1">56 лет</p>
                   </div>
@@ -183,8 +184,3 @@
    </div>
 </body> 
 </html>
-
-
-
-
-
