--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" type="text/css" href="css/desktop/section5.css">
     <link rel="stylesheet" type="text/css" href="css/desktop/section6.css">
     <link rel="stylesheet" type="text/css" href="css/desktop/footer.css">
-    <link rel="stylesheet" type="text/css" href="css/desktop/alert.css">
 
     <link rel="stylesheet" type="text/css" href="css/response/r_style.css">
     <link rel="stylesheet" type="text/css" href="css/response/r_section1.css">
@@ -21,7 +20,6 @@
     <link rel="stylesheet" type="text/css" href="css/response/r_section4.css">
     <link rel="stylesheet" type="text/css" href="css/response/r_section5.css">
     <link rel="stylesheet" type="text/css" href="css/response/r_section6.css">
-    <link rel="stylesheet" type="text/css" href="css/response/r_footer.css">
 
     <link rel="stylesheet" type="text/css" href="css/mobile/m_style.css">
     <link rel="stylesheet" type="text/css" href="css/mobile/m_section1.css">
@@ -44,77 +42,98 @@
             <h3 class="section1_h3">Cook for real</h3>
             <h1 class="section1_h1">Домашние<br>простые рецепты</h1>
             <p class="section1_p">Собирайте рецепты в recipe box</p>
-            <form>
+            <form class="section1_form">
                <button class="section1_btn" onClick='window.location="#section6_email"'>
                   <span>Присоединиться<br>к сообществу</span>
                </button>
             </form>
        </div> 
+
        <div class="section2 style_section"> 
             <div class="section2_flex"> 
-               <div class="section2_box1 section2_box">
-                  <img src="Landing-assets/D_Screen_2_Img1.png" class="section2_img1">
+               <div class="section2_box1 section2_box" id="section2_box1">
+                  <img src="Landing-assets/D_Screen_2_Img1.png" class="section2_img1" >
                   <p class="section2_p">Простые домашние<br> рецепты</p>
                </div>
-               <div class="section2_box2 section2_box">            
+               <div class="section2_box2 section2_box" id="section2_box2">            
                   <img src="Landing-assets/D_Screen_2_Img2.png" class="section2_img1">
                   <p class="section2_p">Статьи о готовке</p>
                </div>
-               <div class="section2_box3 section2_box">            
+               <div class="section2_box3 section2_box"  id="section2_box3">            
                   <img src="Landing-assets/D_Screen_2_Img3.png" class="section2_img1">
                   <p class="section2_p">Бесплатная книга рецептов<br> всем подписчикам</p>
                </div>
-               <div class="section2_box4 section2_box">            
+               <div class="section2_box4 section2_box" id="section2_box4">            
                   <img src="Landing-assets/D_Screen_2_Img4.png" class="section2_img1">
                   <p class="section2_p">Собирайте рецепты<br> в recipe box</p>
                </div>
-               <div class="section2_box5 section2_box">
+               <div class="section2_box5 section2_box" id="section2_box5">
                   <img src="Landing-assets/D_Screen_2_Img5.png" class="section2_img1">
                   <p class="section2_p">Печать рецептов</p>
                </div>
             </div>
+            <div class="section2_radiobox">
+               <input class="section2_radio" id="section2_radio1" type="radio" name="section2_select" value="1" checked onChange="slider(this)"></input>
+               <input class="section2_radio" id="section2_radio2" type="radio" name="section2_select" value="2" onChange="slider(this)"></input>
+               <input class="section2_radio" id="section2_radio3" type="radio" name="section2_select" value="3" onChange="slider(this)"></input>
+               <input class="section2_radio" id="section2_radio4" type="radio" name="section2_select" value="4" onChange="slider(this)"></input>
+               <input class="section2_radio" id="section2_radio5" type="radio" name="section2_select" value="5" onChange="slider(this)"></input>
+            </div>
+            <div class="section2_offset" style="display:none">
+               <div class="section2_offset_for"></div>
+               <div class="section2_offset_back"></div>
+            </div>      
       </div> 
 
-
        <div class="section3 style_section"> 
-            <h1 class="section3_h1">Почему круто<br> быть с нами:</h1>
+            <h1 class="section3_h1">Почему круто быть<br> с нами:</h1>
 
             <div class="section3_flex"> 
-               <div class="section3_box1 section3_box">
+               <div class="section3_box1 section3_box" id="section3_box1">
                   <img src="Landing-assets/D_Screen_3_Img1.png" class="section3_img1">
                   <div class="section3_p section3_box1_p">Получать лучшие рецепты по разным категориям</div>
                </div>
-               <div class="section3_box2 section3_box">
+               <div class="section3_box2 section3_box" id="section3_box2">
                   <img src="Landing-assets/D_Screen_3_Img2.png" class="section3_img2">
                   <p class="section3_p">Готовить без лишних усилий<br>и делать из каждого дня<br>не рутинный</p>
                </div>
-               <div class="section3_box3 section3_box">
+               <div class="section3_box3 section3_box" id="section3_box3">
                   <img src="Landing-assets/D_Screen_3_Img3.png" class="section3_img3">
                   <p class="section3_p ">Довольные<br>члены семьи</p>
                </div>
                <div class="section3_ellipse">
                   <img src="Landing-assets/D_Screen_3_Ellipse.png">
                </div>
-            </div>
 
-       </div> 
+            </div>
+            <div class="section3_radiobox">
+               <input class="section3_radio" id="section3_radio1" type="radio" name="section3_select" value="1" checked onChange="slider(this)"></input>
+               <input class="section3_radio" id="section3_radio2" type="radio" name="section3_select" value="2" onChange="slider(this)"></input>
+               <input class="section3_radio" id="section3_radio3" type="radio" name="section3_select" value="3" onChange="slider(this)"></input>
+            </div>
+            <div class="section3_offset" style="display:none">
+               <div class="section3_offset_for"></div>
+               <div class="section3_offset_back"></div>
+            </div>      
+      </div> 
 
        <div class="section4 style_section"> 
             <div class="section4_backimg">
-               <h4 class="section4_h4_1">Удобно получать на емейл уникальные проверенные рецепты, <br/> которые <br/> дружная команда Tastycookery попробовала сама и рекомендует</h4>
+               <h4 class="section4_h4_1">Удобно получать на емейл уникальные проверенные рецепты, <br>которые дружная команда Tastycookery попробовала сама и рекомендует</h4>
                <button class="section4_btn" onClick='window.location="#section6_email"'>
                   <span>Стать членом семьи Tastycookery<br><strong>Бесплатно</strong></span>
                </button>
             </div>
        </div> 
+
        <div class="section5 style_section"> 
             <h1 class="section5_h1"><p>Отзывы довольных пользователей</p></h1>
             <div class="section5_flex">
-               <div class="section5_box1 section5_box">
+               <div class="section5_box1 section5_box" id="section5_box1">
                   <div class="section5_box1_msg section5_box_msg">
                         <img src="Landing-assets/D_Screen_5_msg1.png">
                         <p>
-                           После того, как стал участником проекта<br>Tastycookery получает много простых<br>рецептов, о которых раньше не задумывался,<br>стал готовить некоторые, семья рада, стали<br>больше разговаривать во время ужина и<br>хвалить кулинарные таланты Человека1.
+                           После того, как стал участником проекта Tastycookery получает много простых рецептов, о которых раньше не задумывался, стал готовить некоторые, семья рада, стали больше разговаривать во время ужина и хвалить кулинарные таланты Человека1.
                         </p>
                   </div>
                   <div class="section5_box1_img section5_box_img">
@@ -123,7 +142,7 @@
                      <p class="p1">56 лет</p>
                   </div>
                </div>            
-               <div class="section5_box2 section5_box">
+               <div class="section5_box2 section5_box" id="section5_box2">
                   <div class="section5_box2_msg section5_box_msg">
                         <img src="Landing-assets/D_Screen_5_msg2.png">
                         <p>
@@ -136,11 +155,11 @@
                      <p class="p1">43 лет</p>
                   </div>
                </div>            
-               <div class="section5_box3 section5_box">
+               <div class="section5_box3 section5_box" id="section5_box3">
                   <div class="section5_box3_msg section5_box_msg">
                         <img src="Landing-assets/D_Screen_5_msg3.png">
                         <p>
-                           Довольна, что благодаря рецептам с TC<br>может на работу брать полезные обеды,<br>что полностью отказалась от офисной<br>неполезной еды и за 2 месяца похудела<br>на 3 кг. И очень рекомендует всем<br>использовать рецепты с сайта
+                           Довольна, что благодаря рецептам с TC <br>может на работу брать полезные обеды,<br>что полностью отказалась от офисной <br>неполезной еды и за 2 месяца похудела <br>на 3 кг. И очень рекомендует всем<br>использовать рецепты с сайта
                         </p>
                   </div>
                   <div class="section5_box3_img section5_box_img">
@@ -150,13 +169,23 @@
                   </div>
                </div>  
             </div>
+            <div class="section5_radiobox">
+               <input class="section5_radio" id="section5_radio1" type="radio" name="section5_select" value="1" checked onChange="slider(this)"></input>
+               <input class="section5_radio" id="section5_radio2" type="radio" name="section5_select" value="2" onChange="slider(this)"></input>
+               <input class="section5_radio" id="section5_radio3" type="radio" name="section5_select" value="3" onChange="slider(this)"></input>
+            </div>
+            <div class="section5_offset" style="display:none">
+               <div class="section5_offset_for"></div>
+               <div class="section5_offset_back"></div>
+            </div>
        </div> 
+
        <div class="section6 style_section"> 
                <div class="section6_box1">
-                  <p>Sign up to receive daily manually selected<br>
+                  <p>Sign up to receive daily manually selected
                      recipes, delicious weekly articles,<br>
-                     3-piece sets of slow cooker, vegetarian,<br>
-                     and lunch ideas, plus Quick&Easy recipes<br>
+                     3-piece sets of slow cooker, vegetarian,
+                     and lunch ideas, plus Quick&Easy recipes
                      and Nutrition Value flashcards via email.
                   </p>
                </div>     
@@ -171,16 +200,22 @@
                   </button>
                   <p>By signing up I agree  to the terms of the Privacy Policy</p>
                </form>   
+       </div> 
                <div id="section6_popup" class="section6_overlay">
                   <div class="section6_popup">
                      <h3>Спасибо за вашу подписку</h3>
                      <a class="section6_popup_close" href="#" onclick="popup_msg_close()">Перейти на наш сайт</a>
                   </div>
                </div>      
-       </div> 
+
        <footer>
           <h4 class="footer_h4">© 2014–2021 TastyCookery.com</h4>
        </footer>
    </div>
 </body> 
 </html>
+
+
+
+
+
